--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "scripts":{
-    "start":"nodemon drone_server.js"
-  },
-  "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "mysql": "^2.18.1",
-    "nodemon": "^3.0.1"
-  }
-  
+    "scripts": {
+        "start": "nodemon drone_server.js"
+    },
+    "dependencies": {
+        "ejs": "^3.1.9",
+        "express": "^4.18.2",
+        "express-session": "^1.17.3",
+        "mysql": "^2.18.1",
+        "nodemon": "^3.0.1"
+    }
 }
